# nrdot-lab

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  .yamllint  CHANGELOG.md  CHANGES.md  CONFIG_ONLY.md  CURRENT_STATUS.md  DEVELOPMENT.md  FINAL_SUMMARY.md  FIXES.md  LICENSE  Makefile  PUSH_INSTRUCTIONS.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SCENARIO_TESTING.md  STREAMLINED.md  STREAMLINING.md  TEST_IMPROVEMENT_PLAN.md  TEST_STRATEGY.md  __init__.py  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.unified.yml  docker-compose.yml  implementation-plan.md  main.py  mkdocs.yml  prepare.ps1  prepare.sh  process-lab.bat  process-lab.ps1  pyproject.toml  requirements-dev.txt  requirements-test.txt  run_all_scenarios.bat  setup.ps1  (+9 more)
.github/workflows/: ci.yml  data-experiment.yml  docs.yml  lint.yml  scenario-matrix.yml  scenario-tests.yml
cli/: __init__.py  app.py
client/: __init__.py
compose/: docker-compose.yml
config/: filter-definitions.yml  newrelic-infra-aggressive-filters.yml  newrelic-infra-current-filters.yml  newrelic-infra-no-filters.yml  newrelic-infra-none.yml  newrelic-infra-targeted-filters.yml  newrelic-infra-targeted.yml  newrelic-infra-template.yml  newrelic-infra-template.yml.bak  newrelic-infra.yml  otel-20s.yaml  otel-30s.yaml  otel-5s.yaml  otel-config.yaml  otel-config.yaml.bak  otel-docker.yaml  otel-scr-lite.yaml  otel-template.yaml  otel.tpl.yaml.bak
core/: __init__.py  analysis.py
docs/: CONTRIBUTING.md  INDEX.md  TEST_IMPROVEMENT_PLAN.md  advanced-scenarios.md  changelog.md  comparison-table.md  concepts.md  experiments.md  faq.md  index.md  lab-guide.md  latest-results.md  mkdocs.yml  nrql-samples.sql  quickstart.md  roadmap.md  scenarios.md  windows-guide.md
docs/adr/: 001-event-bus.md  002-validation-module.md  003-linting-module.md  004-logging-module.md
docs/automation/: github-actions.md  scripts.md
docs/how-to/: extend.md  install.md  troubleshoot.md  validate.md  windows.md
docs/reference/: newrelic-infra.md  nrql-cheatsheet.md  otel-config.md  technical-architecture.md
docs/runbooks/: linting_failures.md  logging_issues.md  validation_failures.md
examples/: process_config_bad.yaml  process_config_good.yaml
load-image/: Dockerfile  entrypoint.sh
models/: dynamic.py  static.py
nrdb_analysis/: README.md
nrql/: validation_queries.md
overrides/: docker-stats.yml  full-host.yml  min-mounts.yml  seccomp-disabled.yml
overrides/filters/: aggressive.yml  current.yml  none.yml  targeted.yml
profiles/: bare-agent.yml  seccomp-nr.json  seccomp-v2.json
schema/v1/: CostEstimate.schema.json  LintResult.schema.json  LoggingSettings.schema.json  ValidationResult.schema.json
scripts/: ci_smoke.sh  fix_line_endings.ps1  fix_line_endings.sh  generate_config.ps1  generate_config.sh  generate_configs.ps1  generate_configs.sh  generate_nrdb_report.sh  generate_otel_configs.ps1  generate_otel_configs.sh  generate_visualization.py  healthcheck.ps1  healthcheck.sh  platform_detect.ps1  platform_detect.sh  run_one.ps1  run_one.sh  run_scenarios.sh  validate.ps1  validate.sh  validate_ingest.ps1  validate_ingest.sh  validate_ingest_nojq.sh  validate_ingest_windows.bat  validate_simple.sh  verify_changes.sh  vis_latency.py  vis_latency_win.py  visualize.py
scripts/unified/: process_lab.py
src/process_lab/cli/: commands.py
src/process_lab/client/: nrdb.py
src/process_lab/core/: config.py  cost.py
src/process_lab/models/: __init__.py  blended.py
src/process_lab/utils/: lint.py  templates.py
src/zcp_cli/: __init__.py  config_only_cli.py  main.py  simple_cli.py
src/zcp_core/: __init__.py  bus.py  bus_simple.py  compat.py  resource.py  schema.py
src/zcp_cost/: __init__.py  coordinator.py  plugin.py  simple_cost.py
src/zcp_lint/: README.md  __init__.py  linter.py  models.py  rules.py  simple_lint.py
src/zcp_logging/: README.md  __init__.py  logger.py
src/zcp_preset/: __init__.py  loader.py  model.py
src/zcp_preset/presets/: java_heavy.yaml
src/zcp_rollout/: __init__.py  backends.py  models.py  orchestrator.py  simple_rollout.py
src/zcp_template/: __init__.py  renderer.py
src/zcp_template/templates/: infra_process.yaml.j2
src/zcp_validate/: README.md  __init__.py  models.py  nrdb_client.py  simple_validate.py  validator.py
templates/: filter-definitions.yml  newrelic-infra.tpl.yaml  wizard-presets.yml
tests/: conftest.py
tests/contracts/: schema_graphql_response.json  test_nrdb_contract.py
tests/fixtures/: common.py
tests/fuzz/: test_fuzz_flags.py
tests/integration/: test_cli_smoke.py  test_complex_config.py  test_error_recovery_flow.py  test_performance.py  test_wizard_flow.py
tests/mutation/: cr-config.toml
tests/perf/: test_cli_perf.py
tests/property/: test_cost_model_property.py
tests/unit/: test_bus.py  test_bus_extended.py  test_config_gen.py  test_cost_static.py  test_imports.py  test_linter_rules.py
tests/unit/cost/: test_coordinator.py  test_plugins.py
tests/unit/lint/: test_linter.py
tests/unit/logging/: test_logger.py
tests/unit/rollout/: test_orchestrator.py
tests/unit/validate/: test_validator.py  test_validator_complex.py
utils/: __init__.py  rollout.py
